--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <h1>AJ CODER</h1>
 
     <!-- Ad placement -->
+            ADS
     <div class="ad-container">
-        <a href="https://www.example.com">
-            <img src="https://via.placeholder.com/728x90?text=Your+Ad+Here" alt="Advertisement" class="ad-banner">
+        <a href="https://www.hostinger.com/blog/hostinger-website-builder">
+            <img src="https://i.ibb.co/wdVwvgW/images-1.jpg" alt="Advertisement" class="ad-banner">
         </a>
     </div>
 </header>
@@ -46,10 +47,11 @@
                 <textarea id="jsCode" class="editor" style="display: none;"></textarea>
             </div>
 
-            <button class="run-button" onclick="runCode()">Run Code</button>
+            <button class="run-button" onclick="runCode()">Run Code</button> </br>
+            ADS
 <div class="ad-container">
-    <a href="https://www.example.com">
-        <img src="https://via.placeholder.com/728x90?text=Your+Ad+Here" alt="Advertisement" class="ad-banner">
+    <a href="https://www.godaddy.com/domains/cashparking">
+        <img src="https://i.ibb.co/2FLsS7h/images-2.jpg" alt="Advertisement" class="ad-banner">
     </a>
 </div>
 
