--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <header>
     <h1>AJ CODER</h1>
 
-    <!-- Ad placement -->
+    
             ADS
     <div class="ad-container">
-        <a href="https://www.hostinger.com/blog/hostinger-website-builder">
-            <img src="https://i.ibb.co/wdVwvgW/images-1.jpg" alt="Advertisement" class="ad-banner">
+        <a href="example.com">
+            <img src="https://i.ibb.co/DzGqVr7/place-your-ads-here-rounded-and-rosette-seals-vector-35652816-2.jpg" alt="Advertisement" class="ad-banner">
         </a>
     </div>
 </header>
@@ -50,8 +50,8 @@
             <button class="run-button" onclick="runCode()">Run Code</button> </br>
             ADS
 <div class="ad-container">
-    <a href="https://www.godaddy.com/domains/cashparking">
-        <img src="https://i.ibb.co/2FLsS7h/images-2.jpg" alt="Advertisement" class="ad-banner">
+    <a href="example.com">
+        <img src="https://i.ibb.co/DzGqVr7/place-your-ads-here-rounded-and-rosette-seals-vector-35652816-2.jpg" alt="Advertisement" class="ad-banner">
     </a>
 </div>
 
