--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
             ADS
     <div class="ad-container">
-        <a href="example.com">
+        <a href="https://www.example.com">
             <img src="https://i.ibb.co/DzGqVr7/place-your-ads-here-rounded-and-rosette-seals-vector-35652816-2.jpg" alt="Advertisement" class="ad-banner">
         </a>
     </div>
@@ -50,7 +50,7 @@
             <button class="run-button" onclick="runCode()">Run Code</button> </br>
             ADS
 <div class="ad-container">
-    <a href="example.com">
+    <a href="https://www.example.com">
         <img src="https://i.ibb.co/DzGqVr7/place-your-ads-here-rounded-and-rosette-seals-vector-35652816-2.jpg" alt="Advertisement" class="ad-banner">
     </a>
 </div>
